# feature-gate

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  codama.mjs  package.json  pnpm-lock.yaml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  publish-js.yml  publish-rust-client.yml
clients/js/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
clients/js/test/: _setup.ts  example.test.ts  increment.test.ts  test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json
program/benches/: compute_units.md  compute_units.rs
program/fuzz/: instr-495sbcdtq5t6H7U4942CvcPdbXMSFRdz6HRD65KXrapo.fix  instr-495sbcdtq5t6H7U4942CvcPdbXMSFRdz6HRD65KXrapo.json  instr-4w54KXVH8vTKSM3ZZqtNYpvroeeVPU8MceKx6R9Yrsjr.fix  instr-4w54KXVH8vTKSM3ZZqtNYpvroeeVPU8MceKx6R9Yrsjr.json  instr-ERABqLygAgd2jipiGCxLzr2NzftUkCKYYGXbRQdzgbNv.fix  instr-ERABqLygAgd2jipiGCxLzr2NzftUkCKYYGXbRQdzgbNv.json  instr-EhN3Y3kT4Y1UsR1cYCah3B8K7v1WBavoaGMAj2koX535.fix  instr-EhN3Y3kT4Y1UsR1cYCah3B8K7v1WBavoaGMAj2koX535.json  instr-GchxwtwwyhddjxiB8SZrX9patGbKQPAZfDJVE1GBC5bZ.fix  instr-GchxwtwwyhddjxiB8SZrX9patGbKQPAZfDJVE1GBC5bZ.json
program/fuzz/blob/: instr-2Hv8ndBhiDk5oQE6861CvT3iPwfPgncsDjzB7nDYEADo.fix  instr-2go4bhM32MuvxfmTyk8yarL7cbo1EG2CtwWjnzBM7tmP.fix  instr-3bEbiTkw73fCr6qgeEe8qB9kEKhJVwyDrDTQg3seh96D.fix  instr-4bM4wqEJzGPKCZDjNikFetFYVnhbVaJruxxR72FnzsD3.fix  instr-BKz4rcGPYcTrMmuosUCntq4PeKC68gey3m9ukxKXJsHP.fix  instr-Cdaa9kbRUbP6ZnvYrV5BQnXMi16TvNtvC8amEmgkudGS.fix  instr-FUjnPdKcvL8r4DfHiEBxkisbZgZwA36CvCT5hLtTemQD.fix  instr-Fa23NCBk9AAEAn5M2gFBGTwFLFLqvk4xo79id9PJTaBv.fix  instr-FdxBuJrFTwqVME8ZQGn5peghsruZ9B7e2KS9yyxhG1oZ.fix  instr-HuyqEFVVxYxmxAmmwKfrjyro36rv2e6tdbGPT1wgiHEj.fix
program/fuzz/json/: instr-2Hv8ndBhiDk5oQE6861CvT3iPwfPgncsDjzB7nDYEADo.json  instr-2go4bhM32MuvxfmTyk8yarL7cbo1EG2CtwWjnzBM7tmP.json  instr-3bEbiTkw73fCr6qgeEe8qB9kEKhJVwyDrDTQg3seh96D.json  instr-4bM4wqEJzGPKCZDjNikFetFYVnhbVaJruxxR72FnzsD3.json  instr-BKz4rcGPYcTrMmuosUCntq4PeKC68gey3m9ukxKXJsHP.json  instr-Cdaa9kbRUbP6ZnvYrV5BQnXMi16TvNtvC8amEmgkudGS.json  instr-FUjnPdKcvL8r4DfHiEBxkisbZgZwA36CvCT5hLtTemQD.json  instr-Fa23NCBk9AAEAn5M2gFBGTwFLFLqvk4xo79id9PJTaBv.json  instr-FdxBuJrFTwqVME8ZQGn5peghsruZ9B7e2KS9yyxhG1oZ.json  instr-HuyqEFVVxYxmxAmmwKfrjyro36rv2e6tdbGPT1wgiHEj.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs  revoke_pending_activation.rs  setup.rs  signal_support_for_staged_feature.rs  signal_support_for_staged_features.rs  stage_feature_for_activation.rs
scripts/: generate-clients.mjs  generate-idl.mjs  restart-test-validator.sh  upgrade-template.mjs  utils.mjs
scripts/ci/: conformance.mjs  regression.mjs  set-env.mjs
scripts/client/: format-js.mjs  format-rust.mjs  lint-rust.mjs
scripts/program/: bench.mjs  build.mjs  format.mjs  lint.mjs  test.mjs
