[package]
name = "solana-feature-gate-program"
version = "0.0.1"
description = "Solana Feature Gate Program"
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/feature-gate"
readme = "../README.md"
license-file = "../LICENSE"
edition = "2021"

[package.metadata.solana]
program-id = "Feature111111111111111111111111111111111111"

[features]
bpf-entrypoint = []
test-sbf = []

[dependencies]
num_enum = "0.7.2"
num-derive = "0.4"
num-traits = "0.2"
shank = "0.4.2"
solana-account-info = "2.2.1"
solana-cpi = "2.2.1"
solana-feature-gate-interface = { version = "2.2.1", features = ["bincode"] }
solana-instruction = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-system-interface = "1"
thiserror = "2.0.9"

[dev-dependencies]
mollusk-svm = { version = "0.4.0" }
mollusk-svm-bencher = "0.4.0"
solana-sdk = "2.0.1"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
