[package]
name = "solana-feature-gate-program"
version = "0.0.1"
description = "Solana Feature Gate Program"
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/feature-gate"
readme = "../README.md"
license-file = "../LICENSE"
edition = "2021"

[package.metadata.solana]
program-id = "Feature111111111111111111111111111111111111"

[dependencies]
num_enum = "0.7.4"
num-derive = "0.4"
num-traits = "0.2"
shank = "0.4.2"
solana-account-info = "3.0.0"
solana-cpi = "3.0.0"
solana-feature-gate-interface = { version = "3.0.0", features = ["bincode"] }
solana-instruction = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "3.0.0"
solana-pubkey = "2.2.1"
solana-sdk-ids = "3.0.0"
solana-system-interface = "2"
thiserror = "2.0.9"

[dev-dependencies]
mollusk-svm = { version = "0.5.1", features = ["fuzz"] }
mollusk-svm-bencher = "0.4.0"
solana-sdk = "3.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints]
workspace = true
