[package]
name = "solana-feature-gate-program"
version = "0.0.1"
description = "Solana Feature Gate Program"
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/feature-gate"
readme = "../README.md"
license-file = "../LICENSE"
edition = "2021"

[package.metadata.solana]
program-id = "Feature111111111111111111111111111111111111"

[dependencies]
num_enum = "0.7.4"
num-derive = "0.4"
num-traits = "0.2"
shank = "0.4.2"
solana-account-info = "3.1.1"
solana-address = "2.6.0"
solana-cpi = "3.1.0"
solana-feature-gate-interface = { version = "3.1.0", features = ["bincode"] }
solana-instruction = "3.4.0"
solana-msg = "3.1.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.1"
solana-sdk-ids = "3.1.0"
solana-system-interface = { version = "3", features = ["bincode"] }
thiserror = "2.0.9"

[dev-dependencies]
mollusk-svm = "0.12.0"
mollusk-svm-bencher = "0.12.0"
solana-account = "3.4.0"
solana-address = { version = "2.6.0", features = ["dev-context-only-utils"] }
solana-rent = "4.2.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[lints]
workspace = true
