[package]
name = "solana-feature-gate-client"
version = "0.0.2"
description = "A generated Rust library for the Feature Gate program"
repository = "https://github.com/solana-program/feature-gate"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "0.4"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-account-info = "^2"
solana-cpi = "^2"
solana-instruction = "^2"
solana-program-error = "^2"
solana-pubkey = "^3"
thiserror = "^2.0"

[dev-dependencies]
