[package]
name = "solana-feature-gate-client"
version = "0.0.2"
description = "A generated Rust library for the Feature Gate program"
repository = "https://github.com/solana-program/feature-gate"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[dependencies]
borsh = "1.0"
num-derive = "0.4"
num-traits = "^0.2"
solana-account-info = "3.1"
solana-address = { version = "2.2", features = ["borsh", "curve25519"] }
solana-cpi = "3.1"
solana-instruction = "3.2"
solana-program-error = "3.0"
thiserror = "^2.0"

[dev-dependencies]
